Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,23 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Argentina'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries[8\n",
-    "        ]"
+    "countries[6]"
    ]
   },
   {
